--- a/nyonoyo/101197-holomess-banpire/rus.textile
+++ b/nyonoyo/101197-holomess-banpire/rus.textile
@@ -1,68 +1,68 @@
-HoloMess ~BANpire~
+Р“РѕР»РѕРіСЂР°С„РёС‡РµСЃРєРёР№ Р±РµСЃРїРѕСЂСЏРґРѕРє ~BANpire~
 
-Автор: nyonoyo
+РђРІС‚РѕСЂ: nyonoyo
 
 *000*2024-05-21 01:42
 
-Вот следующая история HoloMess! Несмотря на то, что Мэл больше официально не является частью Hololive, я думаю, было важно включить её, поскольку она была важным участником с долгосрочным влиянием. Надеюсь, всем это понравится! Следующая история будет посвящена завершению Gen 1, так что я надеюсь, что вы с нетерпением её ждёте!
+Р’РѕС‚ СЃР»РµРґСѓСЋС‰Р°СЏ РёСЃС‚РѕСЂРёСЏ HoloMess! РќРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ РњСЌР» Р±РѕР»СЊС€Рµ РѕС„РёС†РёР°Р»СЊРЅРѕ РЅРµ СЏРІР»СЏРµС‚СЃСЏ С‡Р°СЃС‚СЊСЋ Hololive, СЏ РґСѓРјР°СЋ, Р±С‹Р»Рѕ РІР°Р¶РЅРѕ РІРєР»СЋС‡РёС‚СЊ РµС‘, РїРѕСЃРєРѕР»СЊРєСѓ РѕРЅР° Р±С‹Р»Р° РІР°Р¶РЅС‹Рј СѓС‡Р°СЃС‚РЅРёРєРѕРј СЃ РґРѕР»РіРѕСЃСЂРѕС‡РЅС‹Рј РІР»РёСЏРЅРёРµРј. РќР°РґРµСЋСЃСЊ, РІСЃРµРј СЌС‚Рѕ РїРѕРЅСЂР°РІРёС‚СЃСЏ! РЎР»РµРґСѓСЋС‰Р°СЏ РёСЃС‚РѕСЂРёСЏ Р±СѓРґРµС‚ РїРѕСЃРІСЏС‰РµРЅР° Р·Р°РІРµСЂС€РµРЅРёСЋ Gen 1, С‚Р°Рє С‡С‚Рѕ СЏ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ РІС‹ СЃ РЅРµС‚РµСЂРїРµРЅРёРµРј РµС‘ Р¶РґС‘С‚Рµ!
 
-Ёзора Мэл наклонилась к своему микрофону и послала в него несколько воздушных поцелуев. «Кон-капу~» — поприветствовала вампирша, прежде чем послать в него ещё несколько нежных воздушных поцелуев. «Сегодня мы празднуем миллион подписчиков», — прошептала она. «В сегодняшнем ASMR я буду выполнять задания, за которые все проголосовали. Пришли тысячи голосов, и сегодня я выполню три лучших. Я с нетерпением жду этого... но интересно, сколько из вас проголосовали за что-то неприличное», — размышляла Мел, заканчивая предложение страстным тоном. Её чат был переполнен волнением.
+РЃР·РѕСЂР° РњСЌР» РЅР°РєР»РѕРЅРёР»Р°СЃСЊ Рє СЃРІРѕРµРјСѓ РјРёРєСЂРѕС„РѕРЅСѓ Рё РїРѕСЃР»Р°Р»Р° РІ РЅРµРіРѕ РЅРµСЃРєРѕР»СЊРєРѕ РІРѕР·РґСѓС€РЅС‹С… РїРѕС†РµР»СѓРµРІ. В«РљРѕРЅ-РєР°РїСѓ~В» вЂ” РїРѕРїСЂРёРІРµС‚СЃС‚РІРѕРІР°Р»Р° РІР°РјРїРёСЂС€Р°, РїСЂРµР¶РґРµ С‡РµРј РїРѕСЃР»Р°С‚СЊ РІ РЅРµРіРѕ РµС‰С‘ РЅРµСЃРєРѕР»СЊРєРѕ РЅРµР¶РЅС‹С… РІРѕР·РґСѓС€РЅС‹С… РїРѕС†РµР»СѓРµРІ. В«РЎРµРіРѕРґРЅСЏ РјС‹ РїСЂР°Р·РґРЅСѓРµРј РјРёР»Р»РёРѕРЅ РїРѕРґРїРёСЃС‡РёРєРѕРІВ», вЂ” РїСЂРѕС€РµРїС‚Р°Р»Р° РѕРЅР°. В«Р’ СЃРµРіРѕРґРЅСЏС€РЅРµРј ASMR СЏ Р±СѓРґСѓ РІС‹РїРѕР»РЅСЏС‚СЊ Р·Р°РґР°РЅРёСЏ, Р·Р° РєРѕС‚РѕСЂС‹Рµ РІСЃРµ РїСЂРѕРіРѕР»РѕСЃРѕРІР°Р»Рё. РџСЂРёС€Р»Рё С‚С‹СЃСЏС‡Рё РіРѕР»РѕСЃРѕРІ, Рё СЃРµРіРѕРґРЅСЏ СЏ РІС‹РїРѕР»РЅСЋ С‚СЂРё Р»СѓС‡С€РёС…. РЇ СЃ РЅРµС‚РµСЂРїРµРЅРёРµРј Р¶РґСѓ СЌС‚РѕРіРѕ... РЅРѕ РёРЅС‚РµСЂРµСЃРЅРѕ, СЃРєРѕР»СЊРєРѕ РёР· РІР°СЃ РїСЂРѕРіРѕР»РѕСЃРѕРІР°Р»Рё Р·Р° С‡С‚Рѕ-С‚Рѕ РЅРµРїСЂРёР»РёС‡РЅРѕРµВ», вЂ” СЂР°Р·РјС‹С€Р»СЏР»Р° РњРµР», Р·Р°РєР°РЅС‡РёРІР°СЏ РїСЂРµРґР»РѕР¶РµРЅРёРµ СЃС‚СЂР°СЃС‚РЅС‹Рј С‚РѕРЅРѕРј. Р•С‘ С‡Р°С‚ Р±С‹Р» РїРµСЂРµРїРѕР»РЅРµРЅ РІРѕР»РЅРµРЅРёРµРј.
 
-[Это секрет...]
+[Р­С‚Рѕ СЃРµРєСЂРµС‚...]
 
-[Мел и сама может быть немного непослушной, lol]
+[РњРµР» Рё СЃР°РјР° РјРѕР¶РµС‚ Р±С‹С‚СЊ РЅРµРјРЅРѕРіРѕ РЅРµРїРѕСЃР»СѓС€РЅРѕР№, lol]
 
-[Хе-хе, она не знает, что её ждёт]
+[РҐРµ-С…Рµ, РѕРЅР° РЅРµ Р·РЅР°РµС‚, С‡С‚Рѕ РµС‘ Р¶РґС‘С‚]
 
-Мел нежно почесала ногти о свой микрофон ASMR, к большому удовольствию своих зрителей. «Ну, я лучше не буду заставлять вас ждать», — съязвила она, прежде чем раскрыть третье по популярности задание.
+РњРµР» РЅРµР¶РЅРѕ РїРѕС‡РµСЃР°Р»Р° РЅРѕРіС‚Рё Рѕ СЃРІРѕР№ РјРёРєСЂРѕС„РѕРЅ ASMR, Рє Р±РѕР»СЊС€РѕРјСѓ СѓРґРѕРІРѕР»СЊСЃС‚РІРёСЋ СЃРІРѕРёС… Р·СЂРёС‚РµР»РµР№. В«РќСѓ, СЏ Р»СѓС‡С€Рµ РЅРµ Р±СѓРґСѓ Р·Р°СЃС‚Р°РІР»СЏС‚СЊ РІР°СЃ Р¶РґР°С‚СЊВ», вЂ” СЃСЉСЏР·РІРёР»Р° РѕРЅР°, РїСЂРµР¶РґРµ С‡РµРј СЂР°СЃРєСЂС‹С‚СЊ С‚СЂРµС‚СЊРµ РїРѕ РїРѕРїСѓР»СЏСЂРЅРѕСЃС‚Рё Р·Р°РґР°РЅРёРµ.
 
-«Обмочись»
+В«РћР±РјРѕС‡РёСЃСЊВ»
 
-Мел в шоке прикрыла рот рукой, прежде чем надуться в чате. «Вы, ребята, действительно извращенцы...», — упрекнула она. Но, несмотря на это, пышногрудая блондинка встала со стула с ухмылкой на лице. Она схватила микрофон и поднесла его ко рту, позволяя дыханию щекотать уши зрителей, пока она готовилась выполнить первое задание трансляции.
+РњРµР» РІ С€РѕРєРµ РїСЂРёРєСЂС‹Р»Р° СЂРѕС‚ СЂСѓРєРѕР№, РїСЂРµР¶РґРµ С‡РµРј РЅР°РґСѓС‚СЊСЃСЏ РІ С‡Р°С‚Рµ. В«Р’С‹, СЂРµР±СЏС‚Р°, РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РёР·РІСЂР°С‰РµРЅС†С‹...В», вЂ” СѓРїСЂРµРєРЅСѓР»Р° РѕРЅР°. РќРѕ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° СЌС‚Рѕ, РїС‹С€РЅРѕРіСЂСѓРґР°СЏ Р±Р»РѕРЅРґРёРЅРєР° РІСЃС‚Р°Р»Р° СЃРѕ СЃС‚СѓР»Р° СЃ СѓС…РјС‹Р»РєРѕР№ РЅР° Р»РёС†Рµ. РћРЅР° СЃС…РІР°С‚РёР»Р° РјРёРєСЂРѕС„РѕРЅ Рё РїРѕРґРЅРµСЃР»Р° РµРіРѕ РєРѕ СЂС‚Сѓ, РїРѕР·РІРѕР»СЏСЏ РґС‹С…Р°РЅРёСЋ С‰РµРєРѕС‚Р°С‚СЊ СѓС€Рё Р·СЂРёС‚РµР»РµР№, РїРѕРєР° РѕРЅР° РіРѕС‚РѕРІРёР»Р°СЃСЊ РІС‹РїРѕР»РЅРёС‚СЊ РїРµСЂРІРѕРµ Р·Р°РґР°РЅРёРµ С‚СЂР°РЅСЃР»СЏС†РёРё.
 
-«А-а-а…», — вырвалось у неё из груди, когда она почувствовала, что ослабляет контроль над мочевым пузырём. «Это… оно выходит…» Дыхание вампирши участилось, когда она почувствовала, как тёплая влажность распространяется по промежности её чёрно-жёлтых шорт. Несколько струек мочи стекали по её ногам и между ними на деревянный пол. Мел замурлыкала, когда почувствовала, как её моча скапливается в ботинках и пропитывает ступни. Чат был полностью доволен смешанными звуками дыхания их оши и её мочи, разбрызгивающейся по полу, а также растущим тёмным пятном между её бёдер.
+В«Рђ-Р°-Р°вЂ¦В», вЂ” РІС‹СЂРІР°Р»РѕСЃСЊ Сѓ РЅРµС‘ РёР· РіСЂСѓРґРё, РєРѕРіРґР° РѕРЅР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, С‡С‚Рѕ РѕСЃР»Р°Р±Р»СЏРµС‚ РєРѕРЅС‚СЂРѕР»СЊ РЅР°Рґ РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј. В«Р­С‚РѕвЂ¦ РѕРЅРѕ РІС‹С…РѕРґРёС‚вЂ¦В» Р”С‹С…Р°РЅРёРµ РІР°РјРїРёСЂС€Рё СѓС‡Р°СЃС‚РёР»РѕСЃСЊ, РєРѕРіРґР° РѕРЅР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє С‚С‘РїР»Р°СЏ РІР»Р°Р¶РЅРѕСЃС‚СЊ СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅСЏРµС‚СЃСЏ РїРѕ РїСЂРѕРјРµР¶РЅРѕСЃС‚Рё РµС‘ С‡С‘СЂРЅРѕ-Р¶С‘Р»С‚С‹С… С€РѕСЂС‚. РќРµСЃРєРѕР»СЊРєРѕ СЃС‚СЂСѓРµРє РјРѕС‡Рё СЃС‚РµРєР°Р»Рё РїРѕ РµС‘ РЅРѕРіР°Рј Рё РјРµР¶РґСѓ РЅРёРјРё РЅР° РґРµСЂРµРІСЏРЅРЅС‹Р№ РїРѕР». РњРµР» Р·Р°РјСѓСЂР»С‹РєР°Р»Р°, РєРѕРіРґР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє РµС‘ РјРѕС‡Р° СЃРєР°РїР»РёРІР°РµС‚СЃСЏ РІ Р±РѕС‚РёРЅРєР°С… Рё РїСЂРѕРїРёС‚С‹РІР°РµС‚ СЃС‚СѓРїРЅРё. Р§Р°С‚ Р±С‹Р» РїРѕР»РЅРѕСЃС‚СЊСЋ РґРѕРІРѕР»РµРЅ СЃРјРµС€Р°РЅРЅС‹РјРё Р·РІСѓРєР°РјРё РґС‹С…Р°РЅРёСЏ РёС… РѕС€Рё Рё РµС‘ РјРѕС‡Рё, СЂР°Р·Р±СЂС‹Р·РіРёРІР°СЋС‰РµР№СЃСЏ РїРѕ РїРѕР»Сѓ, Р° С‚Р°РєР¶Рµ СЂР°СЃС‚СѓС‰РёРј С‚С‘РјРЅС‹Рј РїСЏС‚РЅРѕРј РјРµР¶РґСѓ РµС‘ Р±С‘РґРµСЂ.
 
-«Ах, я… я думаю, я закончила…», — простонала Мел, полностью пропитав свою нижнюю часть собственной мочой. Возбуждённая стримерша позволила своей недальновидности взять верх, позволив своему похотливому мозгу взять верх. Она собиралась хорошо провести время в своём чате, к чёрту правила YouTube. Не теряя времени, она показала себе и стриму второй по количеству голосов вариант.
+В«РђС…, СЏвЂ¦ СЏ РґСѓРјР°СЋ, СЏ Р·Р°РєРѕРЅС‡РёР»Р°вЂ¦В», вЂ” РїСЂРѕСЃС‚РѕРЅР°Р»Р° РњРµР», РїРѕР»РЅРѕСЃС‚СЊСЋ РїСЂРѕРїРёС‚Р°РІ СЃРІРѕСЋ РЅРёР¶РЅСЋСЋ С‡Р°СЃС‚СЊ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ РјРѕС‡РѕР№. Р’РѕР·Р±СѓР¶РґС‘РЅРЅР°СЏ СЃС‚СЂРёРјРµСЂС€Р° РїРѕР·РІРѕР»РёР»Р° СЃРІРѕРµР№ РЅРµРґР°Р»СЊРЅРѕРІРёРґРЅРѕСЃС‚Рё РІР·СЏС‚СЊ РІРµСЂС…, РїРѕР·РІРѕР»РёРІ СЃРІРѕРµРјСѓ РїРѕС…РѕС‚Р»РёРІРѕРјСѓ РјРѕР·РіСѓ РІР·СЏС‚СЊ РІРµСЂС…. РћРЅР° СЃРѕР±РёСЂР°Р»Р°СЃСЊ С…РѕСЂРѕС€Рѕ РїСЂРѕРІРµСЃС‚Рё РІСЂРµРјСЏ РІ СЃРІРѕС‘Рј С‡Р°С‚Рµ, Рє С‡С‘СЂС‚Сѓ РїСЂР°РІРёР»Р° YouTube. РќРµ С‚РµСЂСЏСЏ РІСЂРµРјРµРЅРё, РѕРЅР° РїРѕРєР°Р·Р°Р»Р° СЃРµР±Рµ Рё СЃС‚СЂРёРјСѓ РІС‚РѕСЂРѕР№ РїРѕ РєРѕР»РёС‡РµСЃС‚РІСѓ РіРѕР»РѕСЃРѕРІ РІР°СЂРёР°РЅС‚.
 
-«Сердцебиение ASMR»
+В«РЎРµСЂРґС†РµР±РёРµРЅРёРµ ASMRВ»
 
-Мел одарила стрим хитрой ухмылкой. Хотя это не было обязательным для выполнения задания, эротичная вампирша не теряла времени, сбрасывая свой топ, давая миру ясно увидеть её прекрасную, упругую грудь. По мере того, как её возбуждение росло, то же самое происходило и с её зрителями.
+РњРµР» РѕРґР°СЂРёР»Р° СЃС‚СЂРёРј С…РёС‚СЂРѕР№ СѓС…РјС‹Р»РєРѕР№. РҐРѕС‚СЏ СЌС‚Рѕ РЅРµ Р±С‹Р»Рѕ РѕР±СЏР·Р°С‚РµР»СЊРЅС‹Рј РґР»СЏ РІС‹РїРѕР»РЅРµРЅРёСЏ Р·Р°РґР°РЅРёСЏ, СЌСЂРѕС‚РёС‡РЅР°СЏ РІР°РјРїРёСЂС€Р° РЅРµ С‚РµСЂСЏР»Р° РІСЂРµРјРµРЅРё, СЃР±СЂР°СЃС‹РІР°СЏ СЃРІРѕР№ С‚РѕРї, РґР°РІР°СЏ РјРёСЂСѓ СЏСЃРЅРѕ СѓРІРёРґРµС‚СЊ РµС‘ РїСЂРµРєСЂР°СЃРЅСѓСЋ, СѓРїСЂСѓРіСѓСЋ РіСЂСѓРґСЊ. РџРѕ РјРµСЂРµ С‚РѕРіРѕ, РєР°Рє РµС‘ РІРѕР·Р±СѓР¶РґРµРЅРёРµ СЂРѕСЃР»Рѕ, С‚Рѕ Р¶Рµ СЃР°РјРѕРµ РїСЂРѕРёСЃС…РѕРґРёР»Рѕ Рё СЃ РµС‘ Р·СЂРёС‚РµР»СЏРјРё.
 
 [Wowwowowowowowow]
 
-[BANpire снова наносит удар]
+[BANpire СЃРЅРѕРІР° РЅР°РЅРѕСЃРёС‚ СѓРґР°СЂ]
 
-[Лучшие сиськи в Hololive!]
+[Р›СѓС‡С€РёРµ СЃРёСЃСЊРєРё РІ Hololive!]
 
-«Хе-хе... вы извращенцы! Я рада, что они вам нравятся...», — Мэл покраснела, несмотря на ругань. Она обхватила грудь руками, делая ей долгий массаж перед веб-камерой. Её трансляция с нетерпением наблюдала, как она сжимала и манипулировала своей грудью, даже пару раз щёлкнув по соскам для пущей убедительности. С повышенным пульсом она подняла левую грудь одной рукой, прижимая к ней микрофон другой. Громкий, ритмичный стук можно было услышать, когда звук её сердца смешивался с её всё более громким дыханием. Мел наблюдала, как чат-рум прокручивался с головокружительной скоростью, чувствуя гордость за её способность радовать своих подписчиков. Однако между ног блондинки нарастала другая влажность, поскольку её разум и тело жаждали ещё большего внимания. Возвращая микрофон обратно на стол, Мел показала задание, получившее наибольшее количество голосов.
+В«РҐРµ-С…Рµ... РІС‹ РёР·РІСЂР°С‰РµРЅС†С‹! РЇ СЂР°РґР°, С‡С‚Рѕ РѕРЅРё РІР°Рј РЅСЂР°РІСЏС‚СЃСЏ...В», вЂ” РњСЌР» РїРѕРєСЂР°СЃРЅРµР»Р°, РЅРµСЃРјРѕС‚СЂСЏ РЅР° СЂСѓРіР°РЅСЊ. РћРЅР° РѕР±С…РІР°С‚РёР»Р° РіСЂСѓРґСЊ СЂСѓРєР°РјРё, РґРµР»Р°СЏ РµР№ РґРѕР»РіРёР№ РјР°СЃСЃР°Р¶ РїРµСЂРµРґ РІРµР±-РєР°РјРµСЂРѕР№. Р•С‘ С‚СЂР°РЅСЃР»СЏС†РёСЏ СЃ РЅРµС‚РµСЂРїРµРЅРёРµРј РЅР°Р±Р»СЋРґР°Р»Р°, РєР°Рє РѕРЅР° СЃР¶РёРјР°Р»Р° Рё РјР°РЅРёРїСѓР»РёСЂРѕРІР°Р»Р° СЃРІРѕРµР№ РіСЂСѓРґСЊСЋ, РґР°Р¶Рµ РїР°СЂСѓ СЂР°Р· С‰С‘Р»РєРЅСѓРІ РїРѕ СЃРѕСЃРєР°Рј РґР»СЏ РїСѓС‰РµР№ СѓР±РµРґРёС‚РµР»СЊРЅРѕСЃС‚Рё. РЎ РїРѕРІС‹С€РµРЅРЅС‹Рј РїСѓР»СЊСЃРѕРј РѕРЅР° РїРѕРґРЅСЏР»Р° Р»РµРІСѓСЋ РіСЂСѓРґСЊ РѕРґРЅРѕР№ СЂСѓРєРѕР№, РїСЂРёР¶РёРјР°СЏ Рє РЅРµР№ РјРёРєСЂРѕС„РѕРЅ РґСЂСѓРіРѕР№. Р“СЂРѕРјРєРёР№, СЂРёС‚РјРёС‡РЅС‹Р№ СЃС‚СѓРє РјРѕР¶РЅРѕ Р±С‹Р»Рѕ СѓСЃР»С‹С€Р°С‚СЊ, РєРѕРіРґР° Р·РІСѓРє РµС‘ СЃРµСЂРґС†Р° СЃРјРµС€РёРІР°Р»СЃСЏ СЃ РµС‘ РІСЃС‘ Р±РѕР»РµРµ РіСЂРѕРјРєРёРј РґС‹С…Р°РЅРёРµРј. РњРµР» РЅР°Р±Р»СЋРґР°Р»Р°, РєР°Рє С‡Р°С‚-СЂСѓРј РїСЂРѕРєСЂСѓС‡РёРІР°Р»СЃСЏ СЃ РіРѕР»РѕРІРѕРєСЂСѓР¶РёС‚РµР»СЊРЅРѕР№ СЃРєРѕСЂРѕСЃС‚СЊСЋ, С‡СѓРІСЃС‚РІСѓСЏ РіРѕСЂРґРѕСЃС‚СЊ Р·Р° РµС‘ СЃРїРѕСЃРѕР±РЅРѕСЃС‚СЊ СЂР°РґРѕРІР°С‚СЊ СЃРІРѕРёС… РїРѕРґРїРёСЃС‡РёРєРѕРІ. РћРґРЅР°РєРѕ РјРµР¶РґСѓ РЅРѕРі Р±Р»РѕРЅРґРёРЅРєРё РЅР°СЂР°СЃС‚Р°Р»Р° РґСЂСѓРіР°СЏ РІР»Р°Р¶РЅРѕСЃС‚СЊ, РїРѕСЃРєРѕР»СЊРєСѓ РµС‘ СЂР°Р·СѓРј Рё С‚РµР»Рѕ Р¶Р°Р¶РґР°Р»Рё РµС‰С‘ Р±РѕР»СЊС€РµРіРѕ РІРЅРёРјР°РЅРёСЏ. Р’РѕР·РІСЂР°С‰Р°СЏ РјРёРєСЂРѕС„РѕРЅ РѕР±СЂР°С‚РЅРѕ РЅР° СЃС‚РѕР», РњРµР» РїРѕРєР°Р·Р°Р»Р° Р·Р°РґР°РЅРёРµ, РїРѕР»СѓС‡РёРІС€РµРµ РЅР°РёР±РѕР»СЊС€РµРµ РєРѕР»РёС‡РµСЃС‚РІРѕ РіРѕР»РѕСЃРѕРІ.
 
-«Обосраться»
+В«РћР±РѕСЃСЂР°С‚СЊСЃСЏВ»
 
-Мел уставилась в свой экран, её разум пытался обработать эти три слова. «Обосраться? Я думала, что обмочиться было достаточно рискованно!» — подумала она про себя, когда впервые за время трансляции у неё зародилось чувство сомнения. «Подожди? Почему это вообще набрало больше всего голосов? Люди предпочтут посмотреть, как я какаю, чем мастурбирую? Что я делала? О чём сейчас думает мой менеджер?» Пока она боролась со своими эмоциями, она посмотрела в свой чат, чтобы узнать их мысли.
+РњРµР» СѓСЃС‚Р°РІРёР»Р°СЃСЊ РІ СЃРІРѕР№ СЌРєСЂР°РЅ, РµС‘ СЂР°Р·СѓРј РїС‹С‚Р°Р»СЃСЏ РѕР±СЂР°Р±РѕС‚Р°С‚СЊ СЌС‚Рё С‚СЂРё СЃР»РѕРІР°. В«РћР±РѕСЃСЂР°С‚СЊСЃСЏ? РЇ РґСѓРјР°Р»Р°, С‡С‚Рѕ РѕР±РјРѕС‡РёС‚СЊСЃСЏ Р±С‹Р»Рѕ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ СЂРёСЃРєРѕРІР°РЅРЅРѕ!В» вЂ” РїРѕРґСѓРјР°Р»Р° РѕРЅР° РїСЂРѕ СЃРµР±СЏ, РєРѕРіРґР° РІРїРµСЂРІС‹Рµ Р·Р° РІСЂРµРјСЏ С‚СЂР°РЅСЃР»СЏС†РёРё Сѓ РЅРµС‘ Р·Р°СЂРѕРґРёР»РѕСЃСЊ С‡СѓРІСЃС‚РІРѕ СЃРѕРјРЅРµРЅРёСЏ. В«РџРѕРґРѕР¶РґРё? РџРѕС‡РµРјСѓ СЌС‚Рѕ РІРѕРѕР±С‰Рµ РЅР°Р±СЂР°Р»Рѕ Р±РѕР»СЊС€Рµ РІСЃРµРіРѕ РіРѕР»РѕСЃРѕРІ? Р›СЋРґРё РїСЂРµРґРїРѕС‡С‚СѓС‚ РїРѕСЃРјРѕС‚СЂРµС‚СЊ, РєР°Рє СЏ РєР°РєР°СЋ, С‡РµРј РјР°СЃС‚СѓСЂР±РёСЂСѓСЋ? Р§С‚Рѕ СЏ РґРµР»Р°Р»Р°? Рћ С‡С‘Рј СЃРµР№С‡Р°СЃ РґСѓРјР°РµС‚ РјРѕР№ РјРµРЅРµРґР¶РµСЂ?В» РџРѕРєР° РѕРЅР° Р±РѕСЂРѕР»Р°СЃСЊ СЃРѕ СЃРІРѕРёРјРё СЌРјРѕС†РёСЏРјРё, РѕРЅР° РїРѕСЃРјРѕС‚СЂРµР»Р° РІ СЃРІРѕР№ С‡Р°С‚, С‡С‚РѕР±С‹ СѓР·РЅР°С‚СЊ РёС… РјС‹СЃР»Рё.
 
-[Давай, Мел! Просто сделай это!]
+[Р”Р°РІР°Р№, РњРµР»! РџСЂРѕСЃС‚Рѕ СЃРґРµР»Р°Р№ СЌС‚Рѕ!]
 
-[Этот поток, вероятно, заминируют, так что кого это волнует]
+[Р­С‚РѕС‚ РїРѕС‚РѕРє, РІРµСЂРѕСЏС‚РЅРѕ, Р·Р°РјРёРЅРёСЂСѓСЋС‚, С‚Р°Рє С‡С‚Рѕ РєРѕРіРѕ СЌС‚Рѕ РІРѕР»РЅСѓРµС‚]
 
-[Что? Ты серьёзно сейчас струсил?]
+[Р§С‚Рѕ? РўС‹ СЃРµСЂСЊС‘Р·РЅРѕ СЃРµР№С‡Р°СЃ СЃС‚СЂСѓСЃРёР»?]
 
-Мел прикусила губу, просматривая различные сообщения, то поощряющие, то провоцирующие её, что снова повышало её либидо. «Это было бы так непослушно», — спорила она сама с собой, когда влажность в её промежности снова росла. «К чёрту всё, давайте сделаем это...», — сказала она вслух под аплодисменты своих поклонников. Мел развернулась и оперлась на подлокотники кресла, выставив попу лицом прямо в веб-камеру и микрофон ASMR.
+РњРµР» РїСЂРёРєСѓСЃРёР»Р° РіСѓР±Сѓ, РїСЂРѕСЃРјР°С‚СЂРёРІР°СЏ СЂР°Р·Р»РёС‡РЅС‹Рµ СЃРѕРѕР±С‰РµРЅРёСЏ, С‚Рѕ РїРѕРѕС‰СЂСЏСЋС‰РёРµ, С‚Рѕ РїСЂРѕРІРѕС†РёСЂСѓСЋС‰РёРµ РµС‘, С‡С‚Рѕ СЃРЅРѕРІР° РїРѕРІС‹С€Р°Р»Рѕ РµС‘ Р»РёР±РёРґРѕ. В«Р­С‚Рѕ Р±С‹Р»Рѕ Р±С‹ С‚Р°Рє РЅРµРїРѕСЃР»СѓС€РЅРѕВ», вЂ” СЃРїРѕСЂРёР»Р° РѕРЅР° СЃР°РјР° СЃ СЃРѕР±РѕР№, РєРѕРіРґР° РІР»Р°Р¶РЅРѕСЃС‚СЊ РІ РµС‘ РїСЂРѕРјРµР¶РЅРѕСЃС‚Рё СЃРЅРѕРІР° СЂРѕСЃР»Р°. В«Рљ С‡С‘СЂС‚Сѓ РІСЃС‘, РґР°РІР°Р№С‚Рµ СЃРґРµР»Р°РµРј СЌС‚Рѕ...В», вЂ” СЃРєР°Р·Р°Р»Р° РѕРЅР° РІСЃР»СѓС… РїРѕРґ Р°РїР»РѕРґРёСЃРјРµРЅС‚С‹ СЃРІРѕРёС… РїРѕРєР»РѕРЅРЅРёРєРѕРІ. РњРµР» СЂР°Р·РІРµСЂРЅСѓР»Р°СЃСЊ Рё РѕРїРµСЂР»Р°СЃСЊ РЅР° РїРѕРґР»РѕРєРѕС‚РЅРёРєРё РєСЂРµСЃР»Р°, РІС‹СЃС‚Р°РІРёРІ РїРѕРїСѓ Р»РёС†РѕРј РїСЂСЏРјРѕ РІ РІРµР±-РєР°РјРµСЂСѓ Рё РјРёРєСЂРѕС„РѕРЅ ASMR.
 
-Скрыв лицо от глаз, Мел начала хрюкать и напрягать кишечник. Хотя её тело поначалу встречало сопротивление, её сила воли превзошла функции её сфинктера, когда твёрдая каша протолкнулась сквозь заднюю часть чёрных вампирских трусиков и начала выпячивать её шорты наружу. Чувство беспокойства рассеялось в сознании Мел, когда зов природы взял верх, расширяющаяся тёплая масса в её штанах возбуждала её ещё больше. Вопли полуголой стримерши превратились в стоны, когда она потеряла контроль над кишечником, бессильная что-либо сделать, кроме как наблюдать, как её тело заканчивает работу за неё. Всё это время звуки потрескивания и стонов окутывали уши её зрителей, пока они наблюдали, как растёт выпуклость в её шортах, увлекая их в возбуждённую спираль Мэл. Потерянная в собственной похоти, Мэл наконец повернула голову к камере, на её лице появился глубокий багровый румянец, а по подбородку потекли слюни. Её глаза были встречены всеобщей похвалой от её зрителей.
+РЎРєСЂС‹РІ Р»РёС†Рѕ РѕС‚ РіР»Р°Р·, РњРµР» РЅР°С‡Р°Р»Р° С…СЂСЋРєР°С‚СЊ Рё РЅР°РїСЂСЏРіР°С‚СЊ РєРёС€РµС‡РЅРёРє. РҐРѕС‚СЏ РµС‘ С‚РµР»Рѕ РїРѕРЅР°С‡Р°Р»Сѓ РІСЃС‚СЂРµС‡Р°Р»Рѕ СЃРѕРїСЂРѕС‚РёРІР»РµРЅРёРµ, РµС‘ СЃРёР»Р° РІРѕР»Рё РїСЂРµРІР·РѕС€Р»Р° С„СѓРЅРєС†РёРё РµС‘ СЃС„РёРЅРєС‚РµСЂР°, РєРѕРіРґР° С‚РІС‘СЂРґР°СЏ РєР°С€Р° РїСЂРѕС‚РѕР»РєРЅСѓР»Р°СЃСЊ СЃРєРІРѕР·СЊ Р·Р°РґРЅСЋСЋ С‡Р°СЃС‚СЊ С‡С‘СЂРЅС‹С… РІР°РјРїРёСЂСЃРєРёС… С‚СЂСѓСЃРёРєРѕРІ Рё РЅР°С‡Р°Р»Р° РІС‹РїСЏС‡РёРІР°С‚СЊ РµС‘ С€РѕСЂС‚С‹ РЅР°СЂСѓР¶Сѓ. Р§СѓРІСЃС‚РІРѕ Р±РµСЃРїРѕРєРѕР№СЃС‚РІР° СЂР°СЃСЃРµСЏР»РѕСЃСЊ РІ СЃРѕР·РЅР°РЅРёРё РњРµР», РєРѕРіРґР° Р·РѕРІ РїСЂРёСЂРѕРґС‹ РІР·СЏР» РІРµСЂС…, СЂР°СЃС€РёСЂСЏСЋС‰Р°СЏСЃСЏ С‚С‘РїР»Р°СЏ РјР°СЃСЃР° РІ РµС‘ С€С‚Р°РЅР°С… РІРѕР·Р±СѓР¶РґР°Р»Р° РµС‘ РµС‰С‘ Р±РѕР»СЊС€Рµ. Р’РѕРїР»Рё РїРѕР»СѓРіРѕР»РѕР№ СЃС‚СЂРёРјРµСЂС€Рё РїСЂРµРІСЂР°С‚РёР»РёСЃСЊ РІ СЃС‚РѕРЅС‹, РєРѕРіРґР° РѕРЅР° РїРѕС‚РµСЂСЏР»Р° РєРѕРЅС‚СЂРѕР»СЊ РЅР°Рґ РєРёС€РµС‡РЅРёРєРѕРј, Р±РµСЃСЃРёР»СЊРЅР°СЏ С‡С‚Рѕ-Р»РёР±Рѕ СЃРґРµР»Р°С‚СЊ, РєСЂРѕРјРµ РєР°Рє РЅР°Р±Р»СЋРґР°С‚СЊ, РєР°Рє РµС‘ С‚РµР»Рѕ Р·Р°РєР°РЅС‡РёРІР°РµС‚ СЂР°Р±РѕС‚Сѓ Р·Р° РЅРµС‘. Р’СЃС‘ СЌС‚Рѕ РІСЂРµРјСЏ Р·РІСѓРєРё РїРѕС‚СЂРµСЃРєРёРІР°РЅРёСЏ Рё СЃС‚РѕРЅРѕРІ РѕРєСѓС‚С‹РІР°Р»Рё СѓС€Рё РµС‘ Р·СЂРёС‚РµР»РµР№, РїРѕРєР° РѕРЅРё РЅР°Р±Р»СЋРґР°Р»Рё, РєР°Рє СЂР°СЃС‚С‘С‚ РІС‹РїСѓРєР»РѕСЃС‚СЊ РІ РµС‘ С€РѕСЂС‚Р°С…, СѓРІР»РµРєР°СЏ РёС… РІ РІРѕР·Р±СѓР¶РґС‘РЅРЅСѓСЋ СЃРїРёСЂР°Р»СЊ РњСЌР». РџРѕС‚РµСЂСЏРЅРЅР°СЏ РІ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ РїРѕС…РѕС‚Рё, РњСЌР» РЅР°РєРѕРЅРµС† РїРѕРІРµСЂРЅСѓР»Р° РіРѕР»РѕРІСѓ Рє РєР°РјРµСЂРµ, РЅР° РµС‘ Р»РёС†Рµ РїРѕСЏРІРёР»СЃСЏ РіР»СѓР±РѕРєРёР№ Р±Р°РіСЂРѕРІС‹Р№ СЂСѓРјСЏРЅРµС†, Р° РїРѕ РїРѕРґР±РѕСЂРѕРґРєСѓ РїРѕС‚РµРєР»Рё СЃР»СЋРЅРё. Р•С‘ РіР»Р°Р·Р° Р±С‹Р»Рё РІСЃС‚СЂРµС‡РµРЅС‹ РІСЃРµРѕР±С‰РµР№ РїРѕС…РІР°Р»РѕР№ РѕС‚ РµС‘ Р·СЂРёС‚РµР»РµР№.
 
-[Она действительно сделала это... невероятно...]
+[РћРЅР° РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ СЃРґРµР»Р°Р»Р° СЌС‚Рѕ... РЅРµРІРµСЂРѕСЏС‚РЅРѕ...]
 
-[Такая хорошая девочка]
+[РўР°РєР°СЏ С…РѕСЂРѕС€Р°СЏ РґРµРІРѕС‡РєР°]
 
-[Чёрт, я так тверда rn]
+[Р§С‘СЂС‚, СЏ С‚Р°Рє С‚РІРµСЂРґР° rn]
 
-«Я такая грязная девочка». Поклонение её поклонников довело Мэл до крайности, когда она выбросила последние из своих запретов. Безумная вампирша прислонилась грудью к стулу, положив одну руку между ног, а другую на выпуклость в своих шортах. Мел тут же с силой вдавила обе руки в себя через промокшую и грязную одежду, выполняя самую грязную сессию мастурбации, которую она когда-либо делала вживую перед тысячами фанатов. Стоны превратились в крики, которые часто вырывались из микрофона ASMR.
+В«РЇ С‚Р°РєР°СЏ РіСЂСЏР·РЅР°СЏ РґРµРІРѕС‡РєР°В». РџРѕРєР»РѕРЅРµРЅРёРµ РµС‘ РїРѕРєР»РѕРЅРЅРёРєРѕРІ РґРѕРІРµР»Рѕ РњСЌР» РґРѕ РєСЂР°Р№РЅРѕСЃС‚Рё, РєРѕРіРґР° РѕРЅР° РІС‹Р±СЂРѕСЃРёР»Р° РїРѕСЃР»РµРґРЅРёРµ РёР· СЃРІРѕРёС… Р·Р°РїСЂРµС‚РѕРІ. Р‘РµР·СѓРјРЅР°СЏ РІР°РјРїРёСЂС€Р° РїСЂРёСЃР»РѕРЅРёР»Р°СЃСЊ РіСЂСѓРґСЊСЋ Рє СЃС‚СѓР»Сѓ, РїРѕР»РѕР¶РёРІ РѕРґРЅСѓ СЂСѓРєСѓ РјРµР¶РґСѓ РЅРѕРі, Р° РґСЂСѓРіСѓСЋ РЅР° РІС‹РїСѓРєР»РѕСЃС‚СЊ РІ СЃРІРѕРёС… С€РѕСЂС‚Р°С…. РњРµР» С‚СѓС‚ Р¶Рµ СЃ СЃРёР»РѕР№ РІРґР°РІРёР»Р° РѕР±Рµ СЂСѓРєРё РІ СЃРµР±СЏ С‡РµСЂРµР· РїСЂРѕРјРѕРєС€СѓСЋ Рё РіСЂСЏР·РЅСѓСЋ РѕРґРµР¶РґСѓ, РІС‹РїРѕР»РЅСЏСЏ СЃР°РјСѓСЋ РіСЂСЏР·РЅСѓСЋ СЃРµСЃСЃРёСЋ РјР°СЃС‚СѓСЂР±Р°С†РёРё, РєРѕС‚РѕСЂСѓСЋ РѕРЅР° РєРѕРіРґР°-Р»РёР±Рѕ РґРµР»Р°Р»Р° РІР¶РёРІСѓСЋ РїРµСЂРµРґ С‚С‹СЃСЏС‡Р°РјРё С„Р°РЅР°С‚РѕРІ. РЎС‚РѕРЅС‹ РїСЂРµРІСЂР°С‚РёР»РёСЃСЊ РІ РєСЂРёРєРё, РєРѕС‚РѕСЂС‹Рµ С‡Р°СЃС‚Рѕ РІС‹СЂС‹РІР°Р»РёСЃСЊ РёР· РјРёРєСЂРѕС„РѕРЅР° ASMR.
 
-Однако в этот момент все наслаждались шоу, поскольку Мел поддавалась своим самым отвратительным и развратным желаниям. «Ах! Аааааа! ААААААА!» Всего за несколько минут эта бессовестно возбуждённая девушка достигла уровня оргазма, который она никогда не считала возможным. Когда она достигла пика, её колени подогнулись, и она упала на сиденье своего стула, а её попа ударилась об пол с слышимым шлепком. Пока она лежала там, её разум был в беспорядке, её накрыла волна усталости. Закрыв глаза, она наблюдала, как все болтовни осыпали её похвалами, и слабо улыбнулась.
+РћРґРЅР°РєРѕ РІ СЌС‚РѕС‚ РјРѕРјРµРЅС‚ РІСЃРµ РЅР°СЃР»Р°Р¶РґР°Р»РёСЃСЊ С€РѕСѓ, РїРѕСЃРєРѕР»СЊРєСѓ РњРµР» РїРѕРґРґР°РІР°Р»Р°СЃСЊ СЃРІРѕРёРј СЃР°РјС‹Рј РѕС‚РІСЂР°С‚РёС‚РµР»СЊРЅС‹Рј Рё СЂР°Р·РІСЂР°С‚РЅС‹Рј Р¶РµР»Р°РЅРёСЏРј. В«РђС…! РђР°Р°Р°Р°Р°! РђРђРђРђРђРђРђ!В» Р’СЃРµРіРѕ Р·Р° РЅРµСЃРєРѕР»СЊРєРѕ РјРёРЅСѓС‚ СЌС‚Р° Р±РµСЃСЃРѕРІРµСЃС‚РЅРѕ РІРѕР·Р±СѓР¶РґС‘РЅРЅР°СЏ РґРµРІСѓС€РєР° РґРѕСЃС‚РёРіР»Р° СѓСЂРѕРІРЅСЏ РѕСЂРіР°Р·РјР°, РєРѕС‚РѕСЂС‹Р№ РѕРЅР° РЅРёРєРѕРіРґР° РЅРµ СЃС‡РёС‚Р°Р»Р° РІРѕР·РјРѕР¶РЅС‹Рј. РљРѕРіРґР° РѕРЅР° РґРѕСЃС‚РёРіР»Р° РїРёРєР°, РµС‘ РєРѕР»РµРЅРё РїРѕРґРѕРіРЅСѓР»РёСЃСЊ, Рё РѕРЅР° СѓРїР°Р»Р° РЅР° СЃРёРґРµРЅСЊРµ СЃРІРѕРµРіРѕ СЃС‚СѓР»Р°, Р° РµС‘ РїРѕРїР° СѓРґР°СЂРёР»Р°СЃСЊ РѕР± РїРѕР» СЃ СЃР»С‹С€РёРјС‹Рј С€Р»РµРїРєРѕРј. РџРѕРєР° РѕРЅР° Р»РµР¶Р°Р»Р° С‚Р°Рј, РµС‘ СЂР°Р·СѓРј Р±С‹Р» РІ Р±РµСЃРїРѕСЂСЏРґРєРµ, РµС‘ РЅР°РєСЂС‹Р»Р° РІРѕР»РЅР° СѓСЃС‚Р°Р»РѕСЃС‚Рё. Р—Р°РєСЂС‹РІ РіР»Р°Р·Р°, РѕРЅР° РЅР°Р±Р»СЋРґР°Р»Р°, РєР°Рє РІСЃРµ Р±РѕР»С‚РѕРІРЅРё РѕСЃС‹РїР°Р»Рё РµС‘ РїРѕС…РІР°Р»Р°РјРё, Рё СЃР»Р°Р±Рѕ СѓР»С‹Р±РЅСѓР»Р°СЃСЊ.
 
-На следующее утро Мел медленно пришла в себя, её голая грудь и лицо слегка прилипли к кожаному сиденью от пота и слюней. Внезапно воспоминания о прошлой ночи обрушились на неё, как грузовик. В панике она быстро встала и так же быстро пожалела об этом, так как моча и какашки прошлой ночи стали холодными и неприятными. Мел чувствовала раздражающий зуд между ног и ягодицами, вероятно, сыпь. Однако всё это не имело значения, поскольку вампирша бросила взгляд на её страницу на YouTube и приготовилась к худшему.
+РќР° СЃР»РµРґСѓСЋС‰РµРµ СѓС‚СЂРѕ РњРµР» РјРµРґР»РµРЅРЅРѕ РїСЂРёС€Р»Р° РІ СЃРµР±СЏ, РµС‘ РіРѕР»Р°СЏ РіСЂСѓРґСЊ Рё Р»РёС†Рѕ СЃР»РµРіРєР° РїСЂРёР»РёРїР»Рё Рє РєРѕР¶Р°РЅРѕРјСѓ СЃРёРґРµРЅСЊСЋ РѕС‚ РїРѕС‚Р° Рё СЃР»СЋРЅРµР№. Р’РЅРµР·Р°РїРЅРѕ РІРѕСЃРїРѕРјРёРЅР°РЅРёСЏ Рѕ РїСЂРѕС€Р»РѕР№ РЅРѕС‡Рё РѕР±СЂСѓС€РёР»РёСЃСЊ РЅР° РЅРµС‘, РєР°Рє РіСЂСѓР·РѕРІРёРє. Р’ РїР°РЅРёРєРµ РѕРЅР° Р±С‹СЃС‚СЂРѕ РІСЃС‚Р°Р»Р° Рё С‚Р°Рє Р¶Рµ Р±С‹СЃС‚СЂРѕ РїРѕР¶Р°Р»РµР»Р° РѕР± СЌС‚РѕРј, С‚Р°Рє РєР°Рє РјРѕС‡Р° Рё РєР°РєР°С€РєРё РїСЂРѕС€Р»РѕР№ РЅРѕС‡Рё СЃС‚Р°Р»Рё С…РѕР»РѕРґРЅС‹РјРё Рё РЅРµРїСЂРёСЏС‚РЅС‹РјРё. РњРµР» С‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЂР°Р·РґСЂР°Р¶Р°СЋС‰РёР№ Р·СѓРґ РјРµР¶РґСѓ РЅРѕРі Рё СЏРіРѕРґРёС†Р°РјРё, РІРµСЂРѕСЏС‚РЅРѕ, СЃС‹РїСЊ. РћРґРЅР°РєРѕ РІСЃС‘ СЌС‚Рѕ РЅРµ РёРјРµР»Рѕ Р·РЅР°С‡РµРЅРёСЏ, РїРѕСЃРєРѕР»СЊРєСѓ РІР°РјРїРёСЂС€Р° Р±СЂРѕСЃРёР»Р° РІР·РіР»СЏРґ РЅР° РµС‘ СЃС‚СЂР°РЅРёС†Сѓ РЅР° YouTube Рё РїСЂРёРіРѕС‚РѕРІРёР»Р°СЃСЊ Рє С…СѓРґС€РµРјСѓ.
 
-«Видео удалено: нарушение условий использования»
+В«Р’РёРґРµРѕ СѓРґР°Р»РµРЅРѕ: РЅР°СЂСѓС€РµРЅРёРµ СѓСЃР»РѕРІРёР№ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏВ»
 
-«Слава богу…», Мел упала на попу с ещё одним шлепком. Каким-то образом, вероятно, благодаря усилиям её менеджера, исчезло только видео, и её канал был спасён от удаления. Несомненно, позже она выслушает нагоняй от всех, но пока она может быть спокойна. Переоценив своё положение, Мел закусила губу, румянец выступил, когда она опорожнила мочевой пузырь в свои грязные шорты. Она ворковала, когда моча согревала её во многих отношениях, и нежно покачивалась взад-вперёд по полу. «Мои зрители — настоящие извращенцы…»
+В«РЎР»Р°РІР° Р±РѕРіСѓвЂ¦В», РњРµР» СѓРїР°Р»Р° РЅР° РїРѕРїСѓ СЃ РµС‰С‘ РѕРґРЅРёРј С€Р»РµРїРєРѕРј. РљР°РєРёРј-С‚Рѕ РѕР±СЂР°Р·РѕРј, РІРµСЂРѕСЏС‚РЅРѕ, Р±Р»Р°РіРѕРґР°СЂСЏ СѓСЃРёР»РёСЏРј РµС‘ РјРµРЅРµРґР¶РµСЂР°, РёСЃС‡РµР·Р»Рѕ С‚РѕР»СЊРєРѕ РІРёРґРµРѕ, Рё РµС‘ РєР°РЅР°Р» Р±С‹Р» СЃРїР°СЃС‘РЅ РѕС‚ СѓРґР°Р»РµРЅРёСЏ. РќРµСЃРѕРјРЅРµРЅРЅРѕ, РїРѕР·Р¶Рµ РѕРЅР° РІС‹СЃР»СѓС€Р°РµС‚ РЅР°РіРѕРЅСЏР№ РѕС‚ РІСЃРµС…, РЅРѕ РїРѕРєР° РѕРЅР° РјРѕР¶РµС‚ Р±С‹С‚СЊ СЃРїРѕРєРѕР№РЅР°. РџРµСЂРµРѕС†РµРЅРёРІ СЃРІРѕС‘ РїРѕР»РѕР¶РµРЅРёРµ, РњРµР» Р·Р°РєСѓСЃРёР»Р° РіСѓР±Сѓ, СЂСѓРјСЏРЅРµС† РІС‹СЃС‚СѓРїРёР», РєРѕРіРґР° РѕРЅР° РѕРїРѕСЂРѕР¶РЅРёР»Р° РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РІ СЃРІРѕРё РіСЂСЏР·РЅС‹Рµ С€РѕСЂС‚С‹. РћРЅР° РІРѕСЂРєРѕРІР°Р»Р°, РєРѕРіРґР° РјРѕС‡Р° СЃРѕРіСЂРµРІР°Р»Р° РµС‘ РІРѕ РјРЅРѕРіРёС… РѕС‚РЅРѕС€РµРЅРёСЏС…, Рё РЅРµР¶РЅРѕ РїРѕРєР°С‡РёРІР°Р»Р°СЃСЊ РІР·Р°Рґ-РІРїРµСЂС‘Рґ РїРѕ РїРѕР»Сѓ. В«РњРѕРё Р·СЂРёС‚РµР»Рё вЂ” РЅР°СЃС‚РѕСЏС‰РёРµ РёР·РІСЂР°С‰РµРЅС†С‹вЂ¦В»
 
